fix: Help view: extra margin below items added in 1.11

--- a/src/Styles/help.css
+++ b/src/Styles/help.css
@@ -249,6 +249,7 @@
     padding: 0em 1em;
     & .setting-item {
         align-items: center !important;
+        margin-bottom: 0 !important;
         padding: 1em 0em !important;
     }
     & .setting-item-control {
